2004-10-22  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: thumbnail handing in the database 
	* src/GrampsDbBase.py: add set_thumbnail_image and 
	get_thumbnail_image in base class
	* src/GrampsInMemDB.py: saving thumbnail image
	* src/GrampsCfg.py: create thumbnail image directory
	* src/ImageSelect.py: use new thumbnail scheme
	* src/MediaView.py: use new thumbnail scheme
	* src/ReadGedcom.py: use new thumbnail scheme
	* src/ReadXML.py: use new thumbnail scheme
	* src/SelectObject.py: use new thumbnail scheme
	* src/gramps_main.py: use new thumbnail scheme
	* src/Utils.py: remove unused tasks
	* src/RelImage.py: remove unused tasks
	
2004-10-22 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/plugins/TimeLine.py: Remove old Date.UNDEF usage.

2004-10-21  Don Allingham  <dallingham@users.sourceforge.net>
	* src/DateParser.py: fix dates of the format of JAN 2000

2004-10-19  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsCfg.py: eliminate unused options
	* src/gramps.glade: eliminate unused options

2004-10-18  Don Allingham  <dallingham@users.sourceforge.net>
	* src/GrampsBSDDB.py: add dbopen task to provide access to the 
	db object
	* src/ReadGedcom.py: Reduce number of accesses to the database file

2004-10-18 Julio Sanchez <julio.sanchez@gmail.com>
	* src/plugins/IndivComplete.py: Bring book item options in sync
	with the standalone options.

2004-10-18 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/OpenSpreadSheet.py (write_text): Escape special
	XML characters.

2004-10-17  Don Allingham  <dallingham@users.sourceforge.net>
	* src/EditPerson.py: saving grouping name, instead of surname for
	updating of the person list
	* src/ReadGedcom.py: save person and source as soon as created
	* src/gramps_main.py: compare updates based off grouping name 
	instead of surname

2004-10-17 Julio Sanchez <julio.sanchez@gmail.com>
	* src/plugins/rel_es.py: Correct levels.
