@@ -1,3 +1,8 @@
+2004-10-23  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/PeopleModel.py: disable bold due to gtk tree bug
+	* src/PeopleView.py: disable bold due to gtk tree bug
+	* src/plugins/CountAncestors.py: Handle duplicates properly
+
 2004-10-22  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/GrampsBSDDB.py: thumbnail handing in the database 
 	* src/GrampsDbBase.py: add set_thumbnail_image and 
